# ArkBreeder

./: .gitignore  LICENSE  README.md  pyproject.toml
arkbreeder/: config.py  logging_config.py
arkbreeder/core/: breeding_logic.py  import_service.py  parser.py  species_values.py  stats.py
arkbreeder/storage/: database.py  models.py  repository.py
arkbreeder/ui/: app.py  dashboard_charts.py  main_window.py  radar_chart.py  species_image.py  toast.py
arkbreedingtool/: __init__.py  config.py  logging_config.py
arkbreedingtool/core/: breeding_logic.py  import_service.py  mutations.py  parser.py  pedigree.py  server_settings.py  stats.py
arkbreedingtool/resources/: values.default.json
arkbreedingtool/storage/: database.py  models.py  repository.py  settings.py
arkbreedingtool/ui/: app.py  main_window.py  radar_chart.py  species_image.py
docs/wiki/: Breeding-Workflow.md  Creature-Import.md  Getting-Started.md  Home.md  Settings-and-Multipliers.md  Troubleshooting.md
packaging/: arkbreeder.desktop  arkbreedingtool.desktop  build_deb.sh
tests/: test_parser_placeholder.py
