[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-breeding-tool"
version = "0.1.0"
description = "Local breeding manager for ARK: Survival Evolved."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Ark Breeding Tool Contributors"}]
dependencies = [
    "PySide6>=6.6",
]

[project.urls]
Homepage = "https://github.com/gypg7p6c24-byte/ArkBreeder"
Issues = "https://github.com/gypg7p6c24-byte/ArkBreeder/issues"

[project.scripts]
arkbreedingtool = "arkbreedingtool.ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arkbreedingtool*"]

[tool.setuptools.package-data]
arkbreedingtool = ["resources/*.json", "resources/*.svg"]
